# zenith

./: CMakeLists.txt  README.md  test.ll
examples/: main.zn  test.zn
include/: AST.h  Env.h  config.h  driver.h  fifo_map.hpp  lexer.h  parser.h  utils.h
src/: AST.cpp  Env.cpp  driver.cpp  lexer.cpp  main.cpp  parser.cpp  utils.cpp
